--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@nicky-lenaers/ngx-scroll-to": "^3.0.1",
     "@types/jquery": "^3.3.31",
     "jquery": "^3.4.1",
+    "ngx-page-scroll-core": "^7.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
